[package]
name = "gol"
authors = ["Pavel Savara <pavel.savara@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
oauth2 = "4.4.2"

[workspace]
