[package]
name = "gol"
authors = ["Pavel Savara <pavel.savara@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
oauth2 = "4.4.2"
reqwest = { version = "0.11.24", optional = true, default-features = false, features = ["blocking"] }
http = "0.2.11"
thiserror = "1.0"

[workspace]
